# CDGPythonClient

./: Cargo.toml  LICENSE  README.md  pyproject.toml
cdg_python_client/: __init__.py  __init__.pyi
docs/: swagger.json
src/: bills.rs  client.rs  committees.rs  congressional_record.rs  crsreport.rs  hearings.rs  house_votes.rs  laws.rs  lib.rs  members.rs  nominations.rs  sessions.rs  summaries.rs  treaties.rs
test_integ/: README.md  __init__.py  conftest.py  test_amendments.py  test_bills.py  test_committees.py  test_crsreport.py  test_hearings.py  test_house_votes.py  test_laws.py  test_members.py  test_members_extended.py
tests/: __init__.py  conftest.py  test_imports.py
